--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 	<head>
 		<title>Ξενόγλωσση Παιδεία</title>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/nav.css">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="css/shadow.css">
-        <link rel="stylesheet" href="css/nav.css">
+        
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="sortcut icon" type="image/png" href="images/icon.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,10 +15,10 @@
 
     <body>
 
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-        </a>
         <header class="header">
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                <i class="fa fa-bars"></i>
+            </a>
             
             <!-- TOP MENU BAR -->
             <div class="menu">
@@ -77,13 +78,13 @@
         </div>
 
         <div class="front_boxes">
-            <div class="kids">
+            <div class="kids shadow">
                 <h1>Εισαι<br> μαθητης;</h1>
             </div>
-            <div class="students">
+            <div class="students shadow">
                 <h1>Εισαι<br> φοιτητης;</h1>
             </div>		
-            <div class="adults">
+            <div class="adults shadow">
                 <h1>Εισαι<br> ενηλικας;</h1>
             </div>
         </div>
