--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 		<title>Ξενόγλωσση Παιδεία</title>
 		<meta charset="UTF-8">
         <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/shadow.css">
         <link rel="stylesheet" href="css/nav.css">
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="css/shadow.css">
-        
+        <link rel="stylesheet" href="css/home.css">
+
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="sortcut icon" type="image/png" href="images/icon.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -38,45 +39,53 @@
                     <h1>Επικοινωνία</h1>
                 </a>
             </div>
-            <div class="topnav">
-                <div id="mobile">
-                    <a href="index.html" class="home">
-                        <h1>Αρχική</h1>
-                    </a>
-                    <a href="lang/languages.html" class="languages">
-                        <h1>Γλώσσες</h1>
-                    </a>
-                    <a href="crew/crew.html" class="crew">
-                        <h1>Καθηγητές</h1>
-                    </a>
-                    <a href="offers/offers.html" class="offers">
-                        <h1>Προσφορές</h1>
-                    </a>
-                    <a href="contact/contact.html" class="contact">
-                        <h1>Επικοινωνία</h1>
-                    </a>
+        
+            <div class="title">
+                <div class="empty"></div>
+                <h2 class="letters-up">ΚΕΝΤΡΑ ΞΕΝΩΝ ΓΛΩΣΣΩΝ</h2>
+                <h1 class="letters-middle">Ξενόγλωσση Παιδεία</h1>
+                <h2 class="letters-down">SCHOOL OF FOREIGN LANGUAGES</h2>
+                <div class="empty2"></div>
+
+                <div class="text">
+                    <h2 class="here">Εδώ,</h2>
+                    <h2 class="learning"> η εκμάθηση </h2>
+                    <h2 class="become"> γίνεται </h2>
+                    <h2 class="game"> παιχνίδι! </h2>
                 </div>
+
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+                <script src="js/front.js"></script>
             </div>
         </header>
 
-        <div class="title">
-            <div class="empty"></div>
-            <h2 class="letters-up">ΚΕΝΤΡΑ ΞΕΝΩΝ ΓΛΩΣΣΩΝ</h2>
-            <h1 class="letters-middle">Ξενόγλωσση Παιδεία</h1>
-            <h2 class="letters-down">SCHOOL OF FOREIGN LANGUAGES</h2>
-            <div class="empty2"></div>
-
-            <div class="text">
-                <h2 class="here">Εδώ,</h2>
-                <h2 class="learning"> η εκμάθηση </h2>
-                <h2 class="become"> γίνεται </h2>
-                <h2 class="game"> παιχνίδι! </h2>
-            </div>
-
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-            <script src="js/front.js"></script>
+        <!-- Mobile menu -->
+        <div class="topnav">
+            <ul id="mobile">
+                <a href="index.html">
+                    <h1 id="home">Αρχική</h1>
+                </a>
+                <br>
+                <a href="lang/languages.html">
+                    <h1 id="languages">Γλώσσες</h1>
+                </a>
+                <br>
+                <a href="crew/crew.html">
+                    <h1 id="crew">Καθηγητές</h1>
+                </a>
+                <br>
+                <a href="offers/offers.html">
+                    <h1 id="offers">Προσφορές</h1>
+                </a>
+                <br>
+                <a href="contact/contact.html">
+                    <h1 id="contact">Επικοινωνία</h1>
+                </a>
+                <br>
+                <br>
+            </ul>
         </div>
-
+        <br><br><br><br>
         <div class="front_boxes">
             <div class="kids shadow">
                 <h1>Εισαι<br> μαθητης;</h1>
