--- a/lang/languages.html
+++ b/lang/languages.html
@@ -4,7 +4,12 @@
 	<title>Γλώσσες</title>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="../css/reset.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="../css/nav.css">
+	<link rel="stylesheet" href="../css/shadow.css">
+	<link rel="stylesheet" href="../style.css">
 	<link rel="stylesheet" href="languages_style.css">
+
 	<link rel="sortcut icon" type="image/png" href="images/icon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -12,24 +17,19 @@
 <body>
 <!-- ############################ HEADER ############################## -->
 
-	<header class="header">
-		<a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-        </a>
-		<script src="../js/header.js"></script>
-		<script src="../js/mobile.js"></script>
+	<script src="../js/header.js"></script>
 
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-        <script src="../js/front.js"></script>
-	</header>
+	<script src="../js/mobile.js"></script>
 
-	<div class="title">
-		<div class="empty"></div>
-		<h2 class="letters-up">ΚΕΝΤΡΑ ΞΕΝΩΝ ΓΛΩΣΣΩΝ</h2>
-		<h1 class="letters-middle">Ξενόγλωσση Παιδεία</h1>
-		<h2 class="letters-down">SCHOOL OF FOREIGN LANGUAGES</h2>
-		<div class="empty2"></div>
-	</div>
+
+	<main class="content shadow">
+		<h1>
+			CONTENT
+		</h1>
+
+	</main>
+
+	<footer></footer>
 
 	<script src="../js/menu.js"></script>
     
