--- a/crew/crew.html
+++ b/crew/crew.html
@@ -3,68 +3,53 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<link rel="stylesheet" href="../css/reset.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="../css/nav.css">
+	<link rel="stylesheet" href="../css/shadow.css">
+	<link rel="stylesheet" href="../style.css">
 	<link rel="stylesheet" href="crew_style.css">
+
 	<title>Καθηγητές</title>
 </head>
 <body>
 
-	
-	<div class="header">
+	<script src="../js/header.js"></script>
+	<script src="../js/mobile.js"></script>
 
-		<div class="container" onclick="openNav()">
-			<div class="bar1"></div>
-			<div class="bar2"></div>
-			<div class="bar3"></div>
+	<div class="content shadow">
+		<h1>Η ομάδα μας</h1>
+		<br>
+		<div class="crew_members">
+			<div class="container1">
+				<img src="../images/img_avatar.png" alt="Avatar" class="image1">
+				<div class="overlay1">
+					<div class="text1">Hello World</div>
+				</div>
+			</div>
+	
+			<div class="container2">
+				<img src="../images/img_avatar.png" alt="Avatar" class="image2">
+				<div class="overlay2">
+					<div class="text2">Hello World</div>
+				</div>
+			</div>
+	
+			<div class="container3">
+				<img src="../images/img_avatar.png" alt="Avatar" class="image2">
+				<div class="overlay3">
+					<div class="text3">Hello World</div>
+				</div>
+			</div>
 		</div>
 		
-		<div id="mySidenav" class="sidenav">
-			<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-			<a href="languages.html">Γλώσσες</a>
-			<a href="offers.html">Προσφορές</a>
-			<a href="crew.html">Καθηγητές</a>
-		</div>
-		<a href="index.html">
-			<h1 class="letters_up" >Κεντρα Ξενων Γλωσσων</h1>
-			<h1 class="letters_middle" >Ξενογλωσση Παιδεια</h1>
-			<h1 class="letters_down" >School Of Foreign Languages</h1>
-		</a>
-	</div>
-	
-	
-	
-	<div class="crew">
-		<div class="container1">
-			<img src="images/img_avatar.png" alt="Avatar" class="image1">
-			<div class="overlay1">
-				<div class="text1">Hello World</div>
-			</div>
-		</div>
-
-		<div class="container2">
-			<img src="images/img_avatar.png" alt="Avatar" class="image2">
-			<div class="overlay2">
-				<div class="text2">Hello World</div>
-			</div>
-		</div>
-
-		<div class="container3">
-			<img src="images/img_avatar.png" alt="Avatar" class="image3">
-			<div class="overlay3">
-				<div class="text3">Hello World</div>
-			</div>
-		</div>
 	</div>
 	
 
-	<script>
-		function openNav() {
-			document.getElementById("mySidenav").style.width = "320px";
-		}
-			
-		function closeNav() {
-			document.getElementById("mySidenav").style.width = "0";
-		}
-	</script>
+	<footer></footer>
+	
+	<script src="../js/menu.js"></script>
 	
 </body>
 </html>
