contact done + crew (need changes)

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -23,12 +23,15 @@
 
 	<!-- <div class="shadow contact_form"> -->
 		<form class="content shadow" id="contact_form" method="post" action="contact_form_handler.php">
+			<br><br>
+			<h1>Επικοινωνήστε μαζί μας!</h1>
+			<br><br>
 			<input type="text" name="name" class="form_control" placeholder="Ονοματεπώνυμο" required><br>
 
 			<input type="text" name="email" class="form_control" placeholder="Email" required><br>
 
-			<textarea name="message" class="form_control" placeholder="Μήνυμα" rows="4" required></textarea><br>
-
+			<textarea name="message" class="form_control" placeholder="Μήνυμα" rows="5" required></textarea><br>
+			<br><br>
 			<input type="submit" name="" class="form_control submit" value="ΑΠΟΣΤΟΛΗ">
 		</form>
 	<!-- </div> -->
