--- a/crew/crew.html
+++ b/crew/crew.html
@@ -19,8 +19,9 @@
 	<script src="../js/mobile.js"></script>
 
 	<div class="content shadow">
-		<h1>Η ομάδα μας</h1>
 		<br>
+		<h1>Η ομάδα μας</h1>
+		<br><br>
 		<div class="crew_members">
 			<div class="container1">
 				<img src="../images/img_avatar.png" alt="Avatar" class="image1">
@@ -37,9 +38,33 @@
 			</div>
 	
 			<div class="container3">
-				<img src="../images/img_avatar.png" alt="Avatar" class="image2">
+				<img src="../images/img_avatar.png" alt="Avatar" class="image3">
 				<div class="overlay3">
 					<div class="text3">Hello World</div>
+				</div>
+			</div>
+			<div class="container4">
+				<img src="../images/img_avatar.png" alt="Avatar" class="image4">
+				<div class="overlay4">
+					<div class="text4">Hello World</div>
+				</div>
+			</div>
+			<div class="container5">
+				<img src="../images/img_avatar.png" alt="Avatar" class="image5">
+				<div class="overlay5">
+					<div class="text5">Hello World</div>
+				</div>
+			</div>
+			<div class="container6">
+				<img src="../images/img_avatar.png" alt="Avatar" class="image6">
+				<div class="overlay6">
+					<div class="text6">Hello World</div>
+				</div>
+			</div>
+			<div class="container7">
+				<img src="../images/img_avatar.png" alt="Avatar" class="image7">
+				<div class="overlay7">
+					<div class="text7">Hello World</div>
 				</div>
 			</div>
 		</div>
