started lang page + width 90% updated

--- a/lang/languages.html
+++ b/lang/languages.html
@@ -23,10 +23,40 @@
 
 
 	<main class="content shadow">
-		<h1>
-			CONTENT
-		</h1>
-
+		<br>
+		<h1>Γλώσσες</h1>
+		<div class="english">
+			<h2>ΑΓΓΛΙΚΑ</h2>
+			<p>Click for more!</p>
+		</div>
+		<div class="french">
+			<h2>ΓΑΛΛΙΚΑ</h2>
+			<p>Click for more!</p>
+		</div>
+		<div class="german">
+			<h2>ΓΕΡΜΑΝΙΚΑ</h2>
+			<p>Click for more!</p>
+		</div>
+		<div class="spanish">
+			<h2>ΙΣΠΑΝΙΚΑ</h2>
+			<p>Click for more!</p>
+		</div>
+		<div class="italian">
+			<h2>ΙΤΑΛΙΚΑ</h2>
+			<p>Click for more!</p>
+		</div>
+		<div class="turkish">
+			<h2>ΤΟΥΡΚΙΚΑ</h2>
+			<p>Click for more!</p>
+		</div>
+		<div class="russian">
+			<h2>ΡΩΣΙΚΑ</h2>
+			<p>Click for more!</p>
+		</div>
+		<div class="chinese">
+			<h2>ΚΙΝΕΖΙΚΑ</h2>
+			<p>Click for more!</p>
+		</div>
 	</main>
 
 	<footer></footer>
