Fixed Lang page

--- a/lang/languages.html
+++ b/lang/languages.html
@@ -25,40 +25,76 @@
 	<main class="content shadow">
 		<br>
 		<h1>Γλώσσες</h1>
+
+		<!-- English -->
 		<button class="english" onclick="langs_eng()">
 			<h2>ΑΓΓΛΙΚΑ</h2>
-			<p id="eng">kalhspera</p>
 		</button>
+		<div class="eng_text">
+			<p id="eng">kalhspera</p>
+		</div>
+
+		<!-- French -->
 		<button class="french" onclick="langs_fre()">
 			<h2>ΓΑΛΛΙΚΑ</h2>
-			<p id="fre">kalhspera</p>
 		</button>
+		<div class="fre_text">
+			<p id="fre">kalhspera</p>
+		</div>
+
+		<!-- German -->
 		<button class="german" onclick="langs_ger()">
 			<h2>ΓΕΡΜΑΝΙΚΑ</h2>
-			<p id="ger">kalhspera</p>
 		</button>
+		<div class="ger_text">
+			<p id="ger">kalhspera</p>
+		</div>
+
+		<!-- Spanish -->
 		<button class="spanish" onclick="langs_spa()">
 			<h2>ΙΣΠΑΝΙΚΑ</h2>
-			<p id="spa">kalhspera</p>
 		</button>
+		<div class="spa_text">
+			<p id="spa">kalhspera</p>
+		</div>
+
+		<!-- Italian -->
 		<button class="italian" onclick="langs_ita()">
 			<h2>ΙΤΑΛΙΚΑ</h2>
-			<p id="ita">kalhspera</p>
 		</button>
+		<div class="ita_text">
+			<p id="ita">kalhspera</p>
+		</div>
+
+		<!-- Turkish -->
 		<button class="turkish" onclick="langs_tur()">
 			<h2>ΤΟΥΡΚΙΚΑ</h2>
+		</button>
+		<div class="tur_text">
 			<p id="tur">kalhspera</p>
-		</button>
+		</div>
+
+		<!-- Russian -->
 		<button class="russian" onclick="langs_rus()">
-			<h2>ΡΩΣΙΚΑ</h2>
-			<p id="rus">kalhspera <br>ola kala? <br><br><br><br>geia</p>
+			<h2>ΡΩΣΙΚΑ</h2>	
 		</button>
+		<div class="russ_text">
+			<p id="rus">kalhspera <br>ola kala? <br><br><br><br>geia</p>
+		</div>
+		
+		<!-- Chinese -->
 		<button class="chinese" onclick="langs_chi()">
 			<h2>ΚΙΝΕΖΙΚΑ</h2>
-			<p id="chi">kalhspera ti leei</p>
-		</button>'
-	</main>
+		</button>
+		<div class="chi_text">
+			<p id="chi">kalhspera ti leei <br> kkfjkasjdf <br> kajsl <br><br>
+			kasjfdlkjsd <br> kajdfkdjsk</p>
+		</div>
 
+		<br>
+		<br>
+	</main>
+	
 	<footer></footer>
 
 	<script src="../js/menu.js"></script>
