Added margins between the teachers in the crew page

--- a/crew/crew.html
+++ b/crew/crew.html
@@ -18,7 +18,7 @@
 	<script src="../js/header.js"></script>
 	<script src="../js/mobile.js"></script>
 
-	<div class="content shadow">
+	<main class="content shadow">
 		<br>
 		<h1>Η ομάδα μας</h1>
 		<br><br>
@@ -69,7 +69,7 @@
 			</div>
 		</div>
 		
-	</div>
+	</main>
 	
 
 	<footer></footer>
