--- a/lang/languages.html
+++ b/lang/languages.html
@@ -31,7 +31,16 @@
 			<h2>ΑΓΓΛΙΚΑ</h2>
 		</button>
 		<div class="eng_text">
-			<p id="eng">kalhspera</p>
+			<div id="eng">
+				<h1>Γιατί να μάθω Αγγλικά;</h1>
+				<!-- <h2>  -->
+					<p>- Για να επικοινωνείς με τους ανθρώπους σε όλον τον κόσμο! </p>
+					<p>- Για να δώσεις ώθηση στην καριέρα σου.</p>
+					<p>- Για να αποκτήσεις πρόσβαση στη γνώση.</p>
+					<p>- Για να είναι τα ταξίδια σου πιο ευχάριστα, με λιγότερο άγχος και πιο οικονομικά.</p>
+
+				<!-- </h2> -->
+			</div>
 		</div>
 
 		<!-- French -->
@@ -39,7 +48,12 @@
 			<h2>ΓΑΛΛΙΚΑ</h2>
 		</button>
 		<div class="fre_text">
-			<p id="fre">kalhspera</p>
+			<div id="fre">
+				<h1>Γιατί να μάθω Γαλλικά;</h1>
+				<p>- Τα Γαλλικά έχουν μία δυναμική παρουσία στο χώρο της Ευρώπης, καθώς χρησιμοποιούνται σε τρεις εξαιρετικά ισχυρές χώρες της, τη Γαλλία, την Ελβετία και το Βέλγιο.</p>
+				<p>- Η γνώση της γαλλικής γλώσσας αποτελεί βάση για τις άλλες λατινογενείς γλώσσες (Ισπανικά, Ιταλικά, Πορτογαλικά, κ.α.) και διευκολύνει σημαντικά την εκμάθησή τους.</p>
+				<p>- Τα γαλλικά και βέλγικα Πανεπιστήμια, όπως και τα καναδέζικα, βρίσκονται στα υψηλότερα κλιμάκια της ιεραρχίας των Πανεπιστημίων παγκοσμίως, τόσο για θετικές όσο και για θεωρητικές σπουδές.</p>
+			</div>
 		</div>
 
 		<!-- German -->
@@ -47,7 +61,13 @@
 			<h2>ΓΕΡΜΑΝΙΚΑ</h2>
 		</button>
 		<div class="ger_text">
-			<p id="ger">kalhspera</p>
+			<div id="ger">
+				<h1>Γιατί να μάθω Γερμανικά;</h1>
+				<p>- 100 εκατομμύρια Ευρωπαίοι(ες) έχουν τη γερμανική, ως μητρική γλώσσα
+					Επομένως υπάρχουν 100 εκατομμύρια λόγοι να μάθουμε Γερμανικά.</p>
+				<p>- Η Γερμανία έχει πάνω από 340 Ανώτατα Εκπαιδευτικά Ιδρύματα και πανεπιστήμια, αρκετά από τα οποία είναι συνδεδεμένα με ελληνικά πανεπιστήμια μέσα από τα προγράμματα Erasmus.</p>
+				<p>- Η Γερμανία είναι ο σημαντικότερος εμπορικός εταίρος της Ελλάδας. Πάνω από 180 γερμανικές επιχειρήσεις με 19.000 θέσεις εργασίας δραστηριοποιούνται στην Ελλάδα.</p>
+			</div>
 		</div>
 
 		<!-- Spanish -->
@@ -55,7 +75,13 @@
 			<h2>ΙΣΠΑΝΙΚΑ</h2>
 		</button>
 		<div class="spa_text">
-			<p id="spa">kalhspera</p>
+			<div id="spa">
+				<h1>Γιατί να μάθω Ισπανικά;</h1>
+				<p>- Η κατανόηση των Ισπανικών θα προσδώσει  μια καλύτερη κατανόηση της Λατινικής και των επιδράσεών της σε όλες τις ευρωπαϊκές γλώσσες</p>
+				<p>- Τα ισπανικά είναι  100% φωνητική γλώσσα. Οι λέξεις προφέρονται ακριβώς όπως γράφονται και γράφονται ακριβώς όπως προφέρονται. Όταν μαθαίνεις μια ξένη γλώσσα αυτό είναι το πολυτιμότερο που μπορείς να έχεις.</p>
+				<p>- Σε αντίθεση με  τις άλλες γλώσσες, στα Ισπανικά παρατηρούμε ελάχιστες εξαιρέσεις.</p>
+				<p>- Μαθαίνοντας Ισπανικά θα πειστείς ότι μπορείς τελικά να μάθεις μια ξένη γλώσσα, και ίσως σου δώσει την αυτοπεποίθηση να δοκιμάσεις την τύχη σου σε μια άλλη δυσκολότερη!</p>
+			</div>
 		</div>
 
 		<!-- Italian -->
@@ -63,7 +89,13 @@
 			<h2>ΙΤΑΛΙΚΑ</h2>
 		</button>
 		<div class="ita_text">
-			<p id="ita">kalhspera</p>
+			<div id="ita">
+				<h1>Γιατί να μάθω Ιταλικά;</h1>
+				<p>- Γιατί αγαπάμε την Ιταλία, τους Ιταλούς και την ιταλική γλώσσα. Γιατί είναι η γλώσσα της χώρας όπου αναπτύχθηκε ο ρωμαϊκός πολιτισμός ο οποίος στηρίχθηκε και επηρεάστηκε από τον αρχαίο ελληνικό πολιτισμό.</p>
+				<p>- Γιατί όλες οι πόλεις της Ιταλίας είναι ζωντανά μουσεία! Το σημαντικότερο από αυτά είναι η Ρώμη. Η Ρώμη είναι μια πόλη με σπουδαία ιστορία και αξιοσημείωτη προσφορά στην επιστήμη, τον πολιτισμό και τις τέχνες.</p>
+				<p>- Γιατί μας αρέσει η ιταλική λογοτεχνία, από τους μεγάλους κλασσικούς Δάντη, Πετράρχη, Βοκκάκιο μέχρι τους πιο σύγχρονους.</p>
+				<p></p>
+			</div>
 		</div>
 
 		<!-- Turkish -->
@@ -71,7 +103,12 @@
 			<h2>ΤΟΥΡΚΙΚΑ</h2>
 		</button>
 		<div class="tur_text">
-			<p id="tur">kalhspera</p>
+			<div id="tur">
+				<h1>Γιατί να μάθω Τούρκικα;</h1>
+				<p>- Η Τουρκική γλώσσα εξελίσσεται ολοένα και περισσότερο στη χώρα μας. Τα τουρκικά είναι γλώσσα που έχει ως χαρακτηριστικό τις οικείες λέξεις απ’ τα σύγχρονα ελληνικά.</p>
+				<p>- Σκοπός της διδασκαλίας της τουρκικής γλώσσας είναι να φέρουμε τους μαθητές μας σε επαφή με την ιστορία, την κουλτούρα και τον πολιτισμό της Τουρκίας, έννοιες οι οποίες είναι άρρηκτα συνδεδεμένες με την ορθή κατάκτηση μιας γλώσσας.</p>
+				<p>- Η γειτνίαση της χώρας μας με την Τουρκία, οι προσπάθειες ένταξης της στην Ευρωπαϊκή Ένωση και η έκρηξη του διεθνούς εμπορίου έχουν συμβάλλει καταλυτικά ώστε να βελτιωθούν και να ενισχυθούν οι σχέσεις μεταξύ των δύο χωρών, ιδιαίτερα στον εμπορικό και τον τουριστικό τομέα.</p>
+			</div>
 		</div>
 
 		<!-- Russian -->
@@ -79,7 +116,19 @@
 			<h2>ΡΩΣΙΚΑ</h2>	
 		</button>
 		<div class="russ_text">
-			<p id="rus">kalhspera <br>ola kala? <br><br><br><br>geia</p>
+			<div id="rus">
+				<h1>Γιατί να μάθω Ρώσικα;</h1>
+				<p>- Η ρωσική γλώσσα είναι μια πλούσια και πολύ όμορφη γλώσσας, η
+					οποία έχει πολλές ομοιότητες με την ελληνική, ειδικά στη δομή της
+					γραμματικής και του συντακτικού, κάτι το οποίο διευκολύνει τους
+					Έλληνες σπουδαστές στην προσπάθειά τους να μάθουν ρωσικά.</p>
+					<p>- Γιατί την  Ρωσία και την Ελλάδα ενώνουν πολλά πράγματα όπως κοινή
+						θρησκεία και ιστορία.</p>
+					<p>- Η γνώση της ρωσικής γλώσσας είναι απαραίτητη για εισαγωγή στα ΑΕΙ της
+						Ρωσίας και ως γνωστών τα ρωσικά Πανεπιστήμια διατηρούν σταθερά τις
+						πρώτες θέσεις παγκοσμίως στην ποιότητα της εκπαίδευσης σε όλες τις
+						ειδικότητες.</p>
+			</div>
 		</div>
 		
 		<!-- Chinese -->
@@ -87,8 +136,18 @@
 			<h2>ΚΙΝΕΖΙΚΑ</h2>
 		</button>
 		<div class="chi_text">
-			<p id="chi">kalhspera ti leei <br> kkfjkasjdf <br> kajsl <br><br>
-			kasjfdlkjsd <br> kajdfkdjsk</p>
+			<div id="chi">
+				<h1>Γιατί να μάθω Κινέζικα;</h1>
+				<p>- Ομιλείται από το ¼ του παγκόσμιου πληθυσμού.
+					Η νέα παγκόσμια τάση καθιστά τα κινέζικα ως μία από τις δημοφιλέστερες
+					γλώσσες με την ταχύτερη ανάπτυξη.</p>
+				<p>- Τα κινέζικα είναι η ταχύτερα αναπτυσσομένη γλώσσα στον κόσμο και εξελίσσεται στη
+					γλώσσα του εμπορίου και των επιχειρήσεων. Μεγάλες εταιρίες θεωρούν τα κινέζικα ως ένα
+					βασικό προσόν για τους εργαζόμενους που πρόκειται να προσλάβουν.</p>
+				<p>- Μέσω της γλώσσας, έρχεσαι σε τριβή με ένα αξιοθαύμαστο πολιτισμό πολύ διαφορετικό από
+					αυτόν που συναντάει κανείς στη Δύση. Καθένα από τα σύμβολα τα οποία χρησιμοποιούνται
+					στην κινέζικη γλώσσα είναι ένα μικρό ταξίδι στο χρόνο!</p>
+			</div>
 		</div>
 
 		<br>
