Slideshow in languages

--- a/lang/languages.html
+++ b/lang/languages.html
@@ -9,6 +9,10 @@
 	<link rel="stylesheet" href="../css/shadow.css">
 	<link rel="stylesheet" href="../style.css">
 	<link rel="stylesheet" href="languages_style.css">
+	<link rel="stylesheet" href="../css/fade.css">
+	<link rel="stylesheet" href="../css/footer.css">
+
+	<!-- <script src="../js/slide.js"></script> -->
 
 	<link rel="sortcut icon" type="image/png" href="images/icon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,14 +36,28 @@
 		</button>
 		<div class="eng_text">
 			<div id="eng">
+				<br>
+				<br>
+				<div class="slideshow_container">
+					<div class="mySlides fade">
+						<img src="../images/en/a.jpeg" style="width: 100%;">
+					</div>
+					<div class="mySlides fade">
+						<img src="../images/en/b.jpeg" style="width: 100%;">
+					</div>
+					<div class="mySlides fade">
+						<img src="../images/en/c.jpeg" style="width: 100%;">
+					</div>
+				</div>
+
 				<h1>Γιατί να μάθω Αγγλικά;</h1>
 				<!-- <h2>  -->
-					<p>- Για να επικοινωνείς με τους ανθρώπους σε όλον τον κόσμο! </p>
-					<p>- Για να δώσεις ώθηση στην καριέρα σου.</p>
-					<p>- Για να αποκτήσεις πρόσβαση στη γνώση.</p>
-					<p>- Για να είναι τα ταξίδια σου πιο ευχάριστα, με λιγότερο άγχος και πιο οικονομικά.</p>
-
-				<!-- </h2> -->
+				<p>- Για να επικοινωνείς με τους ανθρώπους σε όλον τον κόσμο! </p>
+				<p>- Για να δώσεις ώθηση στην καριέρα σου.</p>
+				<p>- Για να αποκτήσεις πρόσβαση στη γνώση.</p>
+				<p>- Για να είναι τα ταξίδια σου πιο ευχάριστα, με λιγότερο άγχος και πιο οικονομικά.</p>
+				<br>
+				<br>
 			</div>
 		</div>
 
@@ -53,6 +71,8 @@
 				<p>- Τα Γαλλικά έχουν μία δυναμική παρουσία στο χώρο της Ευρώπης, καθώς χρησιμοποιούνται σε τρεις εξαιρετικά ισχυρές χώρες της, τη Γαλλία, την Ελβετία και το Βέλγιο.</p>
 				<p>- Η γνώση της γαλλικής γλώσσας αποτελεί βάση για τις άλλες λατινογενείς γλώσσες (Ισπανικά, Ιταλικά, Πορτογαλικά, κ.α.) και διευκολύνει σημαντικά την εκμάθησή τους.</p>
 				<p>- Τα γαλλικά και βέλγικα Πανεπιστήμια, όπως και τα καναδέζικα, βρίσκονται στα υψηλότερα κλιμάκια της ιεραρχίας των Πανεπιστημίων παγκοσμίως, τόσο για θετικές όσο και για θεωρητικές σπουδές.</p>
+				<br>
+				<br>
 			</div>
 		</div>
 
@@ -153,10 +173,13 @@
 		<br>
 		<br>
 	</main>
+
 	
 	<footer></footer>
 
 	<script src="../js/menu.js"></script>
+	<script src="../js/slide.js"></script>
+
 	<script>
 		function langs_eng() {
 			var x = document.getElementById("eng");
