--- a/contact/contact.html
+++ b/contact/contact.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="../style.css">
 	<link rel="stylesheet" href="../css/shadow.css">
 	<link rel="stylesheet" href="contact_style.css">
+	<link rel="stylesheet" href="../css/footer.css">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
