--- a/crew/crew.html
+++ b/crew/crew.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="../css/shadow.css">
 	<link rel="stylesheet" href="../style.css">
 	<link rel="stylesheet" href="crew_style.css">
+	<link rel="stylesheet" href="../css/footer.css">
 
 	<title>Καθηγητές</title>
 </head>
