--- a/offers/offers.html
+++ b/offers/offers.html
@@ -9,7 +9,8 @@
 	<link rel="stylesheet" href="../css/nav.css">
 	<link rel="stylesheet" href="../css/shadow.css">
 	<link rel="stylesheet" href="../style.css">
-	<link rel="stylesheet" href="offers.css">
+  <link rel="stylesheet" href="offers.css">
+  <link rel="stylesheet" href="../css/footer.css">
 
 	<title>Προσφορές</title>
 </head>
