--- a/contact/contact.html
+++ b/contact/contact.html
@@ -39,7 +39,9 @@
 
 	<br>
 
-	<footer></footer>
+	<footer>
+		<script src="/js/footer.js"></script>
+	</footer>
 
 <!-- ####################################################################
 ***************************** SCRIPTS ******************************* -->
