--- a/index.html
+++ b/index.html
@@ -88,20 +88,22 @@
         </div>
         <br><br><br><br>
         <div class="front_boxes">
-            <div class="kids shadow">
+            <a href="/offers/offers.html" class="kids shadow">
                 <h1>Εισαι<br> μαθητης;</h1>
-            </div>
-            <div class="students shadow">
+            </a>
+            <a href="/offers/offers.html" class="students shadow">
                 <h1>Εισαι<br> φοιτητης;</h1>
-            </div>		
-            <div class="adults shadow">
+            </a>		
+            <a href="/offers/offers.html" class="adults shadow">
                 <h1>Εισαι<br> ενηλικας;</h1>
-            </div>
+            </a>
         </div>
 
         <br><br><br>
 
-        <footer></footer>
+        <footer>
+            <script src="/js/footer.js"></script>
+        </footer>
 
         <script src="js/menu.js"></script>
 
