--- a/lang/languages.html
+++ b/lang/languages.html
@@ -29,6 +29,45 @@
 	<main class="content shadow">
 		<br>
 		<h1>Γλώσσες</h1>
+		<br><br>
+		<div class="slideshow_container">
+			<div class="mySlides fade">
+				<img src="../images/en/big-ben.jpg" style="width: 100%;">
+			</div>
+			<div class="mySlides fade">
+				<img src="../images/en/tower_bridg.jpg" style="width: 100%;">
+			</div>
+			<div class="mySlides fade">
+				<img src="../images/en/eiffel_tower.jpg" style="width: 100%;">
+			</div>
+			<div class="mySlides fade">
+				<img src="../images/en/louvre.jpg" style="width: 100%;">
+			</div>
+			<div class="mySlides fade">
+				<img src="../images/en/cirt.jpg" style="width: 100%;">
+			</div>
+			<div class="mySlides fade">
+				<img src="../images/en/gate.jpg" style="width: 100%;">
+			</div>
+			<div class="mySlides fade">
+				<img src="../images/en/madrid.jpg" style="width: 100%;">
+			</div>
+			<div class="mySlides fade">
+				<img src="../images/en/colosseum.jpg" style="width: 100%;">
+			</div>
+			<div class="mySlides fade">
+				<img src="../images/en/trevi.jpg" style="width: 100%;">
+			</div>
+			<div class="mySlides fade">
+				<img src="../images/en/turkey.jpg" style="width: 100%;">
+			</div>
+			<div class="mySlides fade">
+				<img src="../images/en/russia.jpg" style="width: 100%;">
+			</div>
+			<div class="mySlides fade">
+				<img src="../images/en/china.jpg" style="width: 100%;">
+			</div>
+		</div>
 
 		<!-- English -->
 		<button class="english" onclick="langs_eng()">
@@ -38,17 +77,6 @@
 			<div id="eng">
 				<br>
 				<br>
-				<div class="slideshow_container">
-					<div class="mySlides fade">
-						<img src="../images/en/a.jpeg" style="width: 100%;">
-					</div>
-					<div class="mySlides fade">
-						<img src="../images/en/b.jpeg" style="width: 100%;">
-					</div>
-					<div class="mySlides fade">
-						<img src="../images/en/c.jpeg" style="width: 100%;">
-					</div>
-				</div>
 
 				<h1>Γιατί να μάθω Αγγλικά;</h1>
 				<!-- <h2>  -->
@@ -175,7 +203,9 @@
 	</main>
 
 	
-	<footer></footer>
+	<footer>
+		<script src="/js/footer.js"></script>
+	</footer>
 
 	<script src="../js/menu.js"></script>
 	<script src="../js/slide.js"></script>
