--- a/crew/crew.html
+++ b/crew/crew.html
@@ -73,7 +73,9 @@
 	</main>
 	
 
-	<footer></footer>
+	<footer>
+		<script src="/js/footer.js"></script>
+	</footer>
 	
 	<script src="../js/menu.js"></script>
 	
