new photos to be added + some changes(page offers)

--- a/offers/offers.html
+++ b/offers/offers.html
@@ -34,7 +34,7 @@
 			<h2>Για μαθητές</h2>
 		</button>
 		<div class="kids_text" id="kids">
-		<h1>- A junior και B junior με 150€ ανά τάξη έως 30 Αυγούστου! <br>
+		<h1>- A junior και B junior με 150€ ανά τάξη έως 31 Αυγούστου! <br>
 			- Για δεύτερη ξένη γλώσσα 50% έκπτωση  για όλους τους καινούριους μαθητές μας! <br>
 			- Για όλα τα μέλη της ίδιας οικογένειας 50% έκπτωση για όλους τους καινούριους μαθητές μας!
 		</h1>
@@ -45,7 +45,8 @@
 			<h2>Για φοιτητές</h2>
         </button>
         <div class="students_text" id="stud">
-		  <h1>- Lower(B2), proficiency(C2) με 48€ το μήνα!<br>
+		  <h1>- - Lower(B1-B2) 48€ μηνιαίως!<br>
+			- Proficiency(C1-C2) 55€ μηνιαίως!<br>
 			- TOEFL, GMAT, GRE με 50€ το μήνα! <br>
 			- IELTS σε ένα μήνα με 50€. <br>
 		</h1>
@@ -57,8 +58,8 @@
         </button>
         <div class="adults_text" id="adul">
 		  <h1>- Άμεση μοριοδότηση σε διαγωνισμούς ΑΣΕΠ. <br>
-			- Lower(B2) 48€ μηνιαίως!<br>
-			- Proficiency(C2) 55€ μηνιαίως!<br>
+			- Lower(B1-B2) 48€ μηνιαίως!<br>
+			- Proficiency(C1-C2) 55€ μηνιαίως!<br>
 			</h1>
 
         </div>
@@ -67,7 +68,7 @@
 			<h2>Καλοκαιρινές</h2>
         </button>
         <div class="summer_text" id="summer">
-          <h1>- A junior και B junior </h1>
+          <h1>- Για όλους τους νέους μαθητές μας: </h1>
             
         </div>
 
