--- a/contact/contact.html
+++ b/contact/contact.html
@@ -40,7 +40,7 @@
 	<br>
 
 	<footer>
-		<script src="/js/footer.js"></script>
+		<script src="../js/footer2.js"></script>
 	</footer>
 
 <!-- ####################################################################
