--- a/lang/languages.html
+++ b/lang/languages.html
@@ -205,7 +205,7 @@
 
 	
 	<footer>
-		<script src="/js/footer.js"></script>
+		<script src="../js/footer2.js"></script>
 	</footer>
 
 	<script src="../js/menu.js"></script>
