--- a/offers/offers.html
+++ b/offers/offers.html
@@ -69,7 +69,7 @@
 	
 
 	<footer>
-		<script src="/js/footer.js"></script>
+		<script src="../js/footer2.js"></script>
 	</footer>
 
 	<script src="../js/menu.js"></script>
